# hephaestus

./: .gitignore  Makefile  README.md  TYPESCRIPT_README.md  check_strict_compatibility.sh  generate_only.py  hephaestus.py  note.md  pyproject.toml  regex.txt  setup.cfg  setup.py  trace_stack.py
deployment/: run.sh  setup.sh
src/: args.py  utils.py
src/analysis/: type_dependency_analysis.py
src/compilers/: typescript.py
src/generators/: generator.py  generators.py  instrumentation.py
src/ir/: ast.py  debug_tracer.py  type_utils.py  types.py  typescript_types.py
src/modules/: processor.py
src/transformations/: base.py  tracker.py  type_erasure.py  type_overwriting.py
src/translators/: typescript.py
tests/: TEST_COVERAGE_ANALYSIS.md  test_alias_subtyping.py  test_bug_109_exact_scenario.py  test_bug_O5IxH.py  test_class_declaration_structural.py  test_empty_structural_types.py  test_field_access_type_substitution.py  test_ir.py  test_parameterized_structural_integration.py  test_phantom_type_params.py  test_simple_structural_bug.py  test_structural_generic_types.py  test_structural_parameterized.py  test_structural_type_parameter_bug.py  test_structural_types.py  test_subtype_bug_verification.py  test_type_dependency_analysis.py  test_type_utils.py  test_types.py  test_typescript.py  test_union_subtyping.py
